update run render

--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -1,16 +1,16 @@
-name: Keep Railway Night Time
+name: Keep Render Awake (Night Only)
 
 on:
   schedule:
-    - cron: "*/5 16 * * *"     # 23:00-23:59 VN
-    - cron: "*/5 17-23 * * *"  # 00:00-06:00 VN
-  workflow_dispatch:
+    - cron: "*/5 23 * * *"     # 06:00 - 06:59 VN (23 UTC)
+    - cron: "*/5 0-16 * * *"   # 07:00 - 23:00 VN (0-16 UTC)
+  workflow_dispatch:            # cho chạy thủ công lúc cần
 
 jobs:
   ping:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Ping Railway
+      - name: Ping Render App (GET request)
         run: |
-          curl -I https://excel2wordproject-production.up.railway.app
+          curl -L -s -o /dev/null -w "%{http_code}" https://excel2word-project-1.onrender.com
